@@ -1,5 +1,5 @@
 /**
- * Copyright (c) 2010-2020 Contributors to the openHAB project
+ * Copyright (c) 2010-2021 Contributors to the openHAB project
  *
  * See the NOTICE file(s) distributed with this work for additional
  * information.
@@ -11,8 +11,6 @@
  * SPDX-License-Identifier: EPL-2.0
  */
 package org.openhab.binding.bigassfan.internal;
-
-import org.apache.commons.lang.StringUtils;
 
 /**
  * The {@link BigAssFanConfig} is responsible for storing the BigAssFan thing configuration.
@@ -60,13 +58,13 @@ public class BigAssFanConfig {
     }
 
     public boolean isValid() {
-        if (StringUtils.isBlank(label)) {
+        if (label == null || label.isBlank()) {
             return false;
         }
-        if (StringUtils.isBlank(ipAddress)) {
+        if (ipAddress == null || ipAddress.isBlank()) {
             return false;
         }
-        if (StringUtils.isBlank(macAddress)) {
+        if (macAddress == null || macAddress.isBlank()) {
             return false;
         }
         return true;
