@@ -1,5 +1,5 @@
 /**
- * Copyright (c) 2010-2020 Contributors to the openHAB project
+ * Copyright (c) 2010-2021 Contributors to the openHAB project
  *
  * See the NOTICE file(s) distributed with this work for additional
  * information.
@@ -17,7 +17,6 @@ import static org.openhab.binding.meteoblue.internal.MeteoBlueBindingConstants.T
 import java.util.Collections;
 import java.util.Set;
 
-import org.apache.commons.lang.StringUtils;
 import org.openhab.binding.meteoblue.internal.MeteoBlueBridgeConfig;
 import org.openhab.core.io.net.http.HttpUtil;
 import org.openhab.core.thing.Bridge;
@@ -55,7 +54,7 @@ public class MeteoBlueBridgeHandler extends BaseBridgeHandler {
 
         MeteoBlueBridgeConfig config = getConfigAs(MeteoBlueBridgeConfig.class);
         String apiKeyTemp = config.getApiKey();
-        if (StringUtils.isBlank(apiKeyTemp)) {
+        if (apiKeyTemp == null || apiKeyTemp.isBlank()) {
             updateStatus(ThingStatus.OFFLINE, ThingStatusDetail.CONFIGURATION_ERROR,
                     "Cannot initialize meteoblue bridge. No apiKey provided.");
             return;
