@@ -1,5 +1,5 @@
 /**
- * Copyright (c) 2010-2020 Contributors to the openHAB project
+ * Copyright (c) 2010-2021 Contributors to the openHAB project
  *
  * See the NOTICE file(s) distributed with this work for additional
  * information.
@@ -16,6 +16,7 @@ import static org.openhab.binding.squeezebox.internal.SqueezeBoxBindingConstants
 
 import java.net.URI;
 import java.net.URISyntaxException;
+import java.time.Duration;
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.HashMap;
@@ -25,7 +26,6 @@ import java.util.Set;
 import java.util.concurrent.ScheduledFuture;
 import java.util.concurrent.TimeUnit;
 
-import org.apache.commons.lang.StringUtils;
 import org.eclipse.jdt.annotation.NonNull;
 import org.openhab.binding.squeezebox.internal.SqueezeBoxStateDescriptionOptionsProvider;
 import org.openhab.binding.squeezebox.internal.config.SqueezeBoxPlayerConfig;
@@ -123,6 +123,7 @@ public class SqueezeBoxPlayerHandler extends BaseThingHandler implements Squeeze
 
     private String likeCommand;
     private String unlikeCommand;
+    private boolean connected = false;
 
     /**
      * Creates SqueezeBox Player Handler
@@ -141,24 +142,31 @@ public class SqueezeBoxPlayerHandler extends BaseThingHandler implements Squeeze
     public void initialize() {
         mac = getConfig().as(SqueezeBoxPlayerConfig.class).mac;
         timeCounter();
-        updateBridgeStatus();
+        updateThingStatus();
         logger.debug("player thing {} initialized with mac {}", getThing().getUID(), mac);
+        if (squeezeBoxServerHandler != null) {
+            // ensure we get an up-to-date connection state
+            squeezeBoxServerHandler.requestPlayers();
+        }
     }
 
     @Override
     public void bridgeStatusChanged(ThingStatusInfo bridgeStatusInfo) {
-        updateBridgeStatus();
+        updateThingStatus();
     }
 
-    private void updateBridgeStatus() {
+    private void updateThingStatus() {
         Thing bridge = getBridge();
         if (bridge != null) {
             squeezeBoxServerHandler = (SqueezeBoxServerHandler) bridge.getHandler();
             ThingStatus bridgeStatus = bridge.getStatus();
-            if (bridgeStatus == ThingStatus.ONLINE && getThing().getStatus() != ThingStatus.ONLINE) {
-                updateStatus(ThingStatus.ONLINE, ThingStatusDetail.NONE);
-            } else if (bridgeStatus == ThingStatus.OFFLINE) {
+
+            if (bridgeStatus == ThingStatus.OFFLINE) {
                 updateStatus(ThingStatus.OFFLINE, ThingStatusDetail.BRIDGE_OFFLINE);
+            } else if (!this.connected) {
+                updateStatus(ThingStatus.OFFLINE, ThingStatusDetail.NONE);
+            } else if (bridgeStatus == ThingStatus.ONLINE && getThing().getStatus() != ThingStatus.ONLINE) {
+                updateStatus(ThingStatus.ONLINE, ThingStatusDetail.NONE);
             }
         } else {
             updateStatus(ThingStatus.OFFLINE, ThingStatusDetail.CONFIGURATION_ERROR, "Bridge not found");
@@ -275,7 +283,7 @@ public class SqueezeBoxPlayerHandler extends BaseThingHandler implements Squeeze
                 squeezeBoxServerHandler.playUrl(mac, command.toString());
                 break;
             case CHANNEL_SYNC:
-                if (StringUtils.isBlank(command.toString())) {
+                if (command.toString().isBlank()) {
                     squeezeBoxServerHandler.unSyncPlayer(mac);
                 } else {
                     squeezeBoxServerHandler.syncPlayer(mac, command.toString());
@@ -306,6 +314,16 @@ public class SqueezeBoxPlayerHandler extends BaseThingHandler implements Squeeze
                     squeezeBoxServerHandler.rate(mac, likeCommand);
                 } else if (command.equals(OnOffType.OFF)) {
                     squeezeBoxServerHandler.rate(mac, unlikeCommand);
+                }
+                break;
+            case CHANNEL_SLEEP:
+                if (command instanceof DecimalType) {
+                    Duration sleepDuration = Duration.ofMinutes(((DecimalType) command).longValue());
+                    if (sleepDuration.isNegative() || sleepDuration.compareTo(Duration.ofDays(1)) > 0) {
+                        logger.debug("Sleep timer of {} minutes must be >= 0 and <= 1 day", sleepDuration.toMinutes());
+                        return;
+                    }
+                    squeezeBoxServerHandler.sleep(mac, sleepDuration);
                 }
                 break;
             default:
@@ -433,7 +451,7 @@ public class SqueezeBoxPlayerHandler extends BaseThingHandler implements Squeeze
     private RawType downloadImage(String mac, String url) {
         // Only get the image if this is my PlayerHandler instance
         if (isMe(mac)) {
-            if (StringUtils.isNotEmpty(url)) {
+            if (url != null && !url.isEmpty()) {
                 String sanitizedUrl = sanitizeUrl(url);
                 RawType image = IMAGE_CACHE.putIfAbsentAndGet(url, () -> {
                     logger.debug("Trying to download the content of URL {}", sanitizedUrl);
@@ -518,6 +536,14 @@ public class SqueezeBoxPlayerHandler extends BaseThingHandler implements Squeeze
     }
 
     @Override
+    public void connectedStateChangeEvent(String mac, boolean connected) {
+        if (isMe(mac)) {
+            this.connected = connected;
+            updateThingStatus();
+        }
+    }
+
+    @Override
     public void updateFavoritesListEvent(List<Favorite> favorites) {
         logger.trace("Player {} updating favorites list with {} favorites", mac, favorites.size());
         List<StateOption> options = new ArrayList<>();
@@ -551,83 +577,52 @@ public class SqueezeBoxPlayerHandler extends BaseThingHandler implements Squeeze
      * @return
      */
     int currentVolume() {
-        if (stateMap.containsKey(CHANNEL_VOLUME)) {
-            return ((DecimalType) stateMap.get(CHANNEL_VOLUME)).intValue();
-        } else {
-            return 0;
-        }
+        return cachedStateAsInt(CHANNEL_VOLUME);
     }
 
     int currentPlayingTime() {
-        if (stateMap.containsKey(CHANNEL_CURRENT_PLAYING_TIME)) {
-            return ((DecimalType) stateMap.get(CHANNEL_CURRENT_PLAYING_TIME)).intValue();
-        } else {
-            return 0;
-        }
+        return cachedStateAsInt(CHANNEL_CURRENT_PLAYING_TIME);
     }
 
     int currentNumberPlaylistTracks() {
-        if (stateMap.containsKey(CHANNEL_NUMBER_PLAYLIST_TRACKS)) {
-            return ((DecimalType) stateMap.get(CHANNEL_NUMBER_PLAYLIST_TRACKS)).intValue();
-        } else {
-            return 0;
-        }
+        return cachedStateAsInt(CHANNEL_NUMBER_PLAYLIST_TRACKS);
     }
 
     int currentPlaylistIndex() {
-        if (stateMap.containsKey(CHANNEL_PLAYLIST_INDEX)) {
-            return ((DecimalType) stateMap.get(CHANNEL_PLAYLIST_INDEX)).intValue();
-        } else {
-            return 0;
-        }
+        return cachedStateAsInt(CHANNEL_PLAYLIST_INDEX);
     }
 
     boolean currentPower() {
-        if (stateMap.containsKey(CHANNEL_POWER)) {
-            return (stateMap.get(CHANNEL_POWER).equals(OnOffType.ON) ? true : false);
-        } else {
-            return false;
-        }
+        return cachedStateAsBoolean(CHANNEL_POWER, OnOffType.ON);
     }
 
     boolean currentStop() {
-        if (stateMap.containsKey(CHANNEL_STOP)) {
-            return (stateMap.get(CHANNEL_STOP).equals(OnOffType.ON) ? true : false);
-        } else {
-            return false;
-        }
+        return cachedStateAsBoolean(CHANNEL_STOP, OnOffType.ON);
     }
 
     boolean currentControl() {
-        if (stateMap.containsKey(CHANNEL_CONTROL)) {
-            return (stateMap.get(CHANNEL_CONTROL).equals(PlayPauseType.PLAY) ? true : false);
-        } else {
-            return false;
-        }
+        return cachedStateAsBoolean(CHANNEL_CONTROL, PlayPauseType.PLAY);
     }
 
     boolean currentMute() {
-        if (stateMap.containsKey(CHANNEL_MUTE)) {
-            return (stateMap.get(CHANNEL_MUTE).equals(OnOffType.ON) ? true : false);
-        } else {
-            return false;
-        }
+        return cachedStateAsBoolean(CHANNEL_MUTE, OnOffType.ON);
     }
 
     int currentShuffle() {
-        if (stateMap.containsKey(CHANNEL_CURRENT_PLAYLIST_SHUFFLE)) {
-            return ((DecimalType) stateMap.get(CHANNEL_CURRENT_PLAYLIST_SHUFFLE)).intValue();
-        } else {
-            return 0;
-        }
+        return cachedStateAsInt(CHANNEL_CURRENT_PLAYLIST_SHUFFLE);
     }
 
     int currentRepeat() {
-        if (stateMap.containsKey(CHANNEL_CURRENT_PLAYLIST_REPEAT)) {
-            return ((DecimalType) stateMap.get(CHANNEL_CURRENT_PLAYLIST_REPEAT)).intValue();
-        } else {
-            return 0;
-        }
+        return cachedStateAsInt(CHANNEL_CURRENT_PLAYLIST_REPEAT);
+    }
+
+    private boolean cachedStateAsBoolean(String key, @NonNull State activeState) {
+        return activeState.equals(stateMap.get(key));
+    }
+
+    private int cachedStateAsInt(String key) {
+        State state = stateMap.get(key);
+        return state instanceof DecimalType ? ((DecimalType) state).intValue() : 0;
     }
 
     /**
