@@ -1,5 +1,5 @@
 /**
- * Copyright (c) 2010-2020 Contributors to the openHAB project
+ * Copyright (c) 2010-2021 Contributors to the openHAB project
  *
  * See the NOTICE file(s) distributed with this work for additional
  * information.
@@ -31,7 +31,7 @@ public abstract class BaseHomeThingHandler extends BaseThingHandler {
 
     public Long getHomeId() {
         TadoHomeHandler handler = getHomeHandler();
-        return handler != null ? handler.getHomeId() : new Long(0);
+        return handler != null ? handler.getHomeId() : Long.valueOf(0);
     }
 
     protected TadoHomeHandler getHomeHandler() {
